--- a/src/components/LandingPage.css
+++ b/src/components/LandingPage.css
@@ -139,6 +139,10 @@
   left: 100%;
 }
 
+.link-card-private-bookings {
+  background-image: url('https://i.imgur.com/LM0J22x.png');
+}
+
 .link-card:hover {
   transform: translateY(-3px);
   box-shadow: 0 6px 20px rgba(197, 106, 70, 0.12);
