--- a/src/components/LandingPage.css
+++ b/src/components/LandingPage.css
@@ -167,6 +167,10 @@
   background-image: url('https://i.imgur.com/33kmb4n.png');
 }
 
+.link-card-collaborations {
+  background-image: url('https://i.imgur.com/Dj2tNW2.png');
+}
+
 .link-card-contact {
   background-image: url('https://i.imgur.com/FR3fyYb.png');
 }
