--- a/src/components/LandingPage.css
+++ b/src/components/LandingPage.css
@@ -175,6 +175,10 @@
   background-image: url('https://i.imgur.com/FR3fyYb.png');
 }
 
+.link-card-january-courses {
+  background-image: url('https://i.imgur.com/y2sqrT2.jpeg');
+}
+
 .link-card:hover {
   transform: translateY(-3px);
   box-shadow: 0 6px 20px rgba(197, 106, 70, 0.12);
