--- a/src/components/CyberMonday.css
+++ b/src/components/CyberMonday.css
@@ -148,8 +148,8 @@
 }
 
 .pottery-wheel {
-  width: 400px;
-  height: 400px;
+  width: 450px;
+  height: 450px;
   border-radius: 50%;
   background: radial-gradient(circle at 30% 30%, #D2691E 0%, #8B4513 50%, #654321 100%);
   display: flex;
@@ -158,6 +158,8 @@
   position: absolute;
   top: 50%;
   left: 50%;
+  margin: 0;
+  padding: 0;
   transform: translate(-50%, -50%);
   z-index: 2;
   box-shadow: 
@@ -218,7 +220,7 @@
 }
 
 .wheel-center {
-  font-size: 6rem;
+  font-size: 8rem;
   z-index: 3;
   position: relative;
   transition: transform 0.2s ease;
@@ -226,6 +228,9 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  width: 100%;
+  height: 100%;
+  line-height: 1;
 }
 
 .pottery-wheel.spinning .wheel-center {
