--- a/src/components/CyberMonday.css
+++ b/src/components/CyberMonday.css
@@ -155,9 +155,9 @@
   position: absolute;
   top: 50%;
   left: 50%;
-  margin: 0;
+  margin: 0 !important;
   padding: 0;
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%) !important;
   z-index: 2;
   box-shadow: 
     inset 0 4px 8px rgba(0, 0, 0, 0.3),
@@ -385,12 +385,15 @@
   }
 
   .pottery-wheel {
-    width: 160px;
-    height: 160px;
+    width: 300px;
+    height: 300px;
+    top: 50% !important;
+    left: 50% !important;
+    transform: translate(-50%, -50%) !important;
   }
 
   .wheel-center {
-    font-size: 3rem;
+    font-size: 5rem;
   }
 
   .result-emoji {
