--- a/src/components/CyberMonday.css
+++ b/src/components/CyberMonday.css
@@ -415,7 +415,7 @@
     height: 300px;
     position: absolute !important;
     top: 50% !important;
-    left: 50% !important;
+    left: calc(50% - 10%) !important;
     transform: translate(calc(-50% - 15px), calc(-50% + 10px)) !important;
   }
 
